// Vitest Snapshot v1

exports[`should analyze complex vue-ts project 1`] = `
[
  {
    "entityType": "file",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/index.ts",
    "id": "/index.ts",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/package.json",
    "id": "/package.json",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts",
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/services",
    "id": "/services",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/utils/util.ts",
    "id": "/utils/util.ts",
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/utils",
    "id": "/utils",
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/",
    "id": "/",
    "type": "entity",
  },
  {
    "from": "/",
    "id": "/->/cmp.vue",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/cmp.vue",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/index.ts",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/index.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/package.json",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/package.json",
    "type": "relationship",
  },
  {
    "from": "/services",
    "id": "/services->/services/service.ts",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/services/service.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/services",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/services",
    "type": "relationship",
  },
  {
    "from": "/utils",
    "id": "/utils->/utils/util.ts",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/utils/util.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/utils",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/utils",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/",
    "type": "relationship",
  },
  {
    "columnEnd": 36,
    "columnStart": 1,
    "end": 35,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/utils/util.ts",
    "kind": "ImportDeclaration",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "import",
    "start": 0,
    "to": "/utils/util.ts",
    "type": "relationship",
  },
  {
    "columnEnd": 126,
    "columnStart": 1,
    "end": 398,
    "entityType": "import_declaration",
    "filePath": "/cmp.vue",
    "id": "import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\"",
    "kind": "ImportDeclaration",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 273,
    "type": "entity",
  },
  {
    "columnEnd": 126,
    "columnStart": 1,
    "end": 398,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\"",
    "kind": "ImportDeclaration",
    "lineEnd": 15,
    "lineStart": 15,
    "relationType": "import",
    "start": 273,
    "to": "import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\"",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue",
    "id": "/cmp.vue->/utils/util.ts",
    "relationType": "import",
    "to": "/utils/util.ts",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue",
    "id": "/cmp.vue->import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\"",
    "relationType": "import",
    "to": "import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\"",
    "type": "relationship",
  },
  {
    "columnEnd": 13,
    "columnStart": 10,
    "end": 12,
    "entityType": "variable",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/fn1",
    "kind": "ImportSpecifier",
    "lineEnd": 1,
    "lineStart": 1,
    "start": 9,
    "type": "entity",
  },
  {
    "columnEnd": 13,
    "columnStart": 10,
    "end": 12,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/cmp.vue.ts/fn1",
    "kind": "ImportSpecifier",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "parent",
    "start": 9,
    "to": "/cmp.vue/fn1",
    "type": "relationship",
  },
  {
    "code": " {
  const service = getService()
  return service.method1(a, service.prop1.method2(2))
}",
    "columnEnd": 2,
    "columnStart": 1,
    "end": 169,
    "entityType": "function",
    "filePath": "/utils/util.ts",
    "id": "/utils/util.ts/fn1",
    "kind": "FunctionDeclaration",
    "lineEnd": 6,
    "lineStart": 3,
    "logEnd": 169,
    "logStart": 81,
    "start": 50,
    "type": "entity",
    "typeString": "typeof import(\\"/utils/util\\").fn1",
  },
  {
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/utils/util.ts/fn1",
    "relationType": "use",
    "to": "/utils/util.ts/fn1",
    "type": "relationship",
  },
  {
    "code": " {
  expose();

const val = ref(fn1(1))

const __returned__ = { val, fn1 }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
return __returned__
}",
    "columnEnd": 2,
    "columnStart": 3,
    "end": 269,
    "entityType": "function",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/setup",
    "kind": "MethodDeclaration",
    "lineEnd": 12,
    "lineStart": 4,
    "logEnd": 269,
    "logStart": 83,
    "start": 56,
    "type": "entity",
    "typeString": "(__props: any, { expose }: { expose: any; }) => { val: any; fn1: typeof import(\\"/utils/util\\").fn1; }",
  },
  {
    "code": " {
  expose();

const val = ref(fn1(1))

const __returned__ = { val, fn1 }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
return __returned__
}",
    "columnEnd": 2,
    "columnStart": 3,
    "end": 269,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/cmp.vue.ts/setup",
    "kind": "MethodDeclaration",
    "lineEnd": 12,
    "lineStart": 4,
    "logEnd": 269,
    "logStart": 83,
    "relationType": "parent",
    "start": 56,
    "to": "/cmp.vue/setup",
    "type": "relationship",
  },
  {
    "code": "__props",
    "columnEnd": 16,
    "columnStart": 9,
    "end": 69,
    "entityType": "unknown",
    "filePath": "/cmp.vue",
    "id": "<unknown>",
    "kind": "Parameter",
    "lineEnd": 4,
    "lineStart": 4,
    "meta_kind": "Parameter",
    "start": 62,
    "type": "entity",
  },
  {
    "columnEnd": 16,
    "columnStart": 9,
    "end": 69,
    "from": "/cmp.vue/setup",
    "id": "/cmp.vue.ts/setup-><unknown>",
    "kind": "Identifier",
    "lineEnd": 4,
    "lineStart": 4,
    "relationType": "parent",
    "start": 62,
    "to": "<unknown>",
    "type": "relationship",
  },
  {
    "columnEnd": 24,
    "columnStart": 7,
    "end": 121,
    "entityType": "variable",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/setup/val",
    "kind": "VariableDeclaration",
    "lineEnd": 7,
    "lineStart": 7,
    "start": 104,
    "type": "entity",
  },
  {
    "columnEnd": 24,
    "columnStart": 7,
    "end": 121,
    "from": "/cmp.vue/setup",
    "id": "/cmp.vue.ts/setup->/cmp.vue.ts/setup/val",
    "kind": "VariableDeclaration",
    "lineEnd": 7,
    "lineStart": 7,
    "relationType": "parent",
    "start": 104,
    "to": "/cmp.vue/setup/val",
    "type": "relationship",
  },
  {
    "columnEnd": 16,
    "columnStart": 13,
    "end": 113,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/setup/val/ref",
    "kind": "Identifier",
    "lineEnd": 7,
    "lineStart": 7,
    "start": 110,
    "type": "entity",
  },
  {
    "from": "/cmp.vue/setup/val",
    "id": "/cmp.vue.ts/setup/val->/utils/util.ts/fn1",
    "relationType": "use",
    "to": "/utils/util.ts/fn1",
    "type": "relationship",
  },
  {
    "columnEnd": 34,
    "columnStart": 7,
    "end": 156,
    "entityType": "variable",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/setup/__returned__",
    "kind": "VariableDeclaration",
    "lineEnd": 9,
    "lineStart": 9,
    "start": 129,
    "type": "entity",
  },
  {
    "columnEnd": 34,
    "columnStart": 7,
    "end": 156,
    "from": "/cmp.vue/setup",
    "id": "/cmp.vue.ts/setup->/cmp.vue.ts/setup/__returned__",
    "kind": "VariableDeclaration",
    "lineEnd": 9,
    "lineStart": 9,
    "relationType": "parent",
    "start": 129,
    "to": "/cmp.vue/setup/__returned__",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue/setup/__returned__",
    "id": "/cmp.vue.ts/setup/__returned__->/cmp.vue.ts/setup/val",
    "relationType": "use",
    "to": "/cmp.vue/setup/val",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue/setup/__returned__",
    "id": "/cmp.vue.ts/setup/__returned__->/utils/util.ts/fn1",
    "relationType": "use",
    "to": "/utils/util.ts/fn1",
    "type": "relationship",
  },
  {
    "columnEnd": 2031,
    "columnStart": 2007,
    "end": 2069,
    "entityType": "variable",
    "filePath": "/node_modules/typescript/lib/lib.es5.d.ts",
    "id": "/node_modules/typescript/lib/lib.es5.d.ts/Object",
    "kind": "VariableDeclaration",
    "lineEnd": 2,
    "lineStart": 2,
    "start": 2045,
    "type": "entity",
  },
  {
    "from": "/cmp.vue/setup",
    "id": "/cmp.vue.ts/setup->/node_modules/typescript/lib/lib.es5.d.ts/Object",
    "relationType": "use",
    "to": "/node_modules/typescript/lib/lib.es5.d.ts/Object",
    "type": "relationship",
  },
  {
    "columnEnd": 1567,
    "columnStart": 1484,
    "end": 1605,
    "entityType": "function",
    "filePath": "/node_modules/typescript/lib/lib.es5.d.ts",
    "id": "/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    "kind": "MethodSignature",
    "lineEnd": 2,
    "lineStart": 2,
    "start": 1522,
    "type": "entity",
    "typeString": "<T>(o: T, p: PropertyKey, attributes: PropertyDescriptor & ThisType<any>) => T",
  },
  {
    "from": "/cmp.vue/setup",
    "id": "/cmp.vue.ts/setup->/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    "relationType": "use",
    "to": "/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    "type": "relationship",
  },
  {
    "columnEnd": 75,
    "columnStart": 58,
    "end": 231,
    "entityType": "property",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/setup/enumerable",
    "kind": "PropertyAssignment",
    "lineEnd": 10,
    "lineStart": 10,
    "start": 214,
    "type": "entity",
  },
  {
    "columnEnd": 75,
    "columnStart": 58,
    "end": 231,
    "from": "/cmp.vue/setup",
    "id": "/cmp.vue.ts/setup->/cmp.vue.ts/setup/enumerable",
    "kind": "PropertyAssignment",
    "lineEnd": 10,
    "lineStart": 10,
    "relationType": "parent",
    "start": 214,
    "to": "/cmp.vue/setup/enumerable",
    "type": "relationship",
  },
  {
    "columnEnd": 88,
    "columnStart": 77,
    "end": 244,
    "entityType": "property",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/setup/value",
    "kind": "PropertyAssignment",
    "lineEnd": 10,
    "lineStart": 10,
    "start": 233,
    "type": "entity",
  },
  {
    "columnEnd": 88,
    "columnStart": 77,
    "end": 244,
    "from": "/cmp.vue/setup",
    "id": "/cmp.vue.ts/setup->/cmp.vue.ts/setup/value",
    "kind": "PropertyAssignment",
    "lineEnd": 10,
    "lineStart": 10,
    "relationType": "parent",
    "start": 233,
    "to": "/cmp.vue/setup/value",
    "type": "relationship",
  },
  {
    "columnEnd": 45,
    "columnStart": 10,
    "end": 317,
    "entityType": "variable",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/toDisplayString",
    "kind": "ImportSpecifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 282,
    "type": "entity",
  },
  {
    "columnEnd": 45,
    "columnStart": 10,
    "end": 317,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/cmp.vue.ts/toDisplayString",
    "kind": "ImportSpecifier",
    "lineEnd": 15,
    "lineStart": 15,
    "relationType": "parent",
    "start": 282,
    "to": "/cmp.vue/toDisplayString",
    "type": "relationship",
  },
  {
    "columnEnd": 45,
    "columnStart": 29,
    "end": 317,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/_toDisplayString",
    "kind": "Identifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 301,
    "type": "entity",
  },
  {
    "columnEnd": 70,
    "columnStart": 47,
    "end": 342,
    "entityType": "variable",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/openBlock",
    "kind": "ImportSpecifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 319,
    "type": "entity",
  },
  {
    "columnEnd": 70,
    "columnStart": 47,
    "end": 342,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/cmp.vue.ts/openBlock",
    "kind": "ImportSpecifier",
    "lineEnd": 15,
    "lineStart": 15,
    "relationType": "parent",
    "start": 319,
    "to": "/cmp.vue/openBlock",
    "type": "relationship",
  },
  {
    "columnEnd": 70,
    "columnStart": 60,
    "end": 342,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/_openBlock",
    "kind": "Identifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 332,
    "type": "entity",
  },
  {
    "columnEnd": 113,
    "columnStart": 72,
    "end": 385,
    "entityType": "variable",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/createElementBlock",
    "kind": "ImportSpecifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 344,
    "type": "entity",
  },
  {
    "columnEnd": 113,
    "columnStart": 72,
    "end": 385,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/cmp.vue.ts/createElementBlock",
    "kind": "ImportSpecifier",
    "lineEnd": 15,
    "lineStart": 15,
    "relationType": "parent",
    "start": 344,
    "to": "/cmp.vue/createElementBlock",
    "type": "relationship",
  },
  {
    "columnEnd": 113,
    "columnStart": 94,
    "end": 385,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/_createElementBlock",
    "kind": "Identifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 366,
    "type": "entity",
  },
  {
    "code": " {
  return (_openBlock(), _createElementBlock(\\"div\\", null, _toDisplayString(_ctx.val), 1 /* TEXT */))
}",
    "columnEnd": 2,
    "columnStart": 1,
    "end": 540,
    "entityType": "function",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/render",
    "kind": "FunctionDeclaration",
    "lineEnd": 19,
    "lineStart": 17,
    "logEnd": 540,
    "logStart": 437,
    "start": 400,
    "type": "entity",
    "typeString": "typeof import(\\"/cmp.vue\\").render",
  },
  {
    "code": " {
  return (_openBlock(), _createElementBlock(\\"div\\", null, _toDisplayString(_ctx.val), 1 /* TEXT */))
}",
    "columnEnd": 2,
    "columnStart": 1,
    "end": 540,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/cmp.vue.ts/render",
    "kind": "FunctionDeclaration",
    "lineEnd": 19,
    "lineStart": 17,
    "logEnd": 540,
    "logStart": 437,
    "relationType": "parent",
    "start": 400,
    "to": "/cmp.vue/render",
    "type": "relationship",
  },
  {
    "columnEnd": 28,
    "columnStart": 24,
    "end": 427,
    "from": "/cmp.vue/render",
    "id": "/cmp.vue.ts/render-><unknown>",
    "kind": "Identifier",
    "lineEnd": 17,
    "lineStart": 17,
    "relationType": "parent",
    "start": 423,
    "to": "<unknown>",
    "type": "relationship",
  },
  {
    "columnEnd": 21,
    "columnStart": 11,
    "end": 459,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/render/_openBlock",
    "kind": "Identifier",
    "lineEnd": 18,
    "lineStart": 18,
    "start": 449,
    "type": "entity",
  },
  {
    "columnEnd": 44,
    "columnStart": 25,
    "end": 482,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/render/_createElementBlock",
    "kind": "Identifier",
    "lineEnd": 18,
    "lineStart": 18,
    "start": 463,
    "type": "entity",
  },
  {
    "columnEnd": 74,
    "columnStart": 58,
    "end": 512,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/render/_toDisplayString",
    "kind": "Identifier",
    "lineEnd": 18,
    "lineStart": 18,
    "start": 496,
    "type": "entity",
  },
  {
    "columnEnd": 83,
    "columnStart": 80,
    "end": 521,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/render/val",
    "kind": "Identifier",
    "lineEnd": 18,
    "lineStart": 18,
    "start": 518,
    "type": "entity",
  },
  {
    "columnEnd": 28,
    "columnStart": 1,
    "end": 27,
    "from": "/index.ts",
    "id": "/index.ts->/cmp.vue.ts",
    "kind": "ImportDeclaration",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "import",
    "start": 0,
    "to": "/cmp.vue",
    "type": "relationship",
  },
  {
    "from": "/index.ts",
    "id": "/index.ts->/cmp.vue",
    "relationType": "import",
    "to": "/cmp.vue",
    "type": "relationship",
  },
  {
    "columnEnd": 11,
    "columnStart": 8,
    "end": 10,
    "entityType": "identifier",
    "filePath": "/index.ts",
    "id": "/index.ts/cmp",
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "start": 7,
    "type": "entity",
  },
  {
    "code": " {
  return {
    method1(a: number, b: number) {
      return (a + b) / 2
    },
    prop1: {
      method2(a: number) {
        return a * a
      }
    }
  }
}",
    "columnEnd": 2,
    "columnStart": 1,
    "end": 190,
    "entityType": "function",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts/getService",
    "kind": "FunctionDeclaration",
    "lineEnd": 12,
    "lineStart": 1,
    "logEnd": 190,
    "logStart": 29,
    "start": 0,
    "type": "entity",
    "typeString": "typeof import(\\"/services/service\\").getService",
  },
  {
    "code": " {
  return {
    method1(a: number, b: number) {
      return (a + b) / 2
    },
    prop1: {
      method2(a: number) {
        return a * a
      }
    }
  }
}",
    "columnEnd": 2,
    "columnStart": 1,
    "end": 190,
    "from": "/services/service.ts",
    "id": "/services/service.ts->/services/service.ts/getService",
    "kind": "FunctionDeclaration",
    "lineEnd": 12,
    "lineStart": 1,
    "logEnd": 190,
    "logStart": 29,
    "relationType": "parent",
    "start": 0,
    "to": "/services/service.ts/getService",
    "type": "relationship",
  },
  {
    "code": " {
      return (a + b) / 2
    }",
    "columnEnd": 6,
    "columnStart": 5,
    "end": 108,
    "entityType": "function",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts/getService/method1",
    "kind": "MethodDeclaration",
    "lineEnd": 5,
    "lineStart": 3,
    "logEnd": 108,
    "logStart": 76,
    "start": 46,
    "type": "entity",
    "typeString": "(a: number, b: number) => number",
  },
  {
    "code": " {
      return (a + b) / 2
    }",
    "columnEnd": 6,
    "columnStart": 5,
    "end": 108,
    "from": "/services/service.ts/getService",
    "id": "/services/service.ts/getService->/services/service.ts/getService/method1",
    "kind": "MethodDeclaration",
    "lineEnd": 5,
    "lineStart": 3,
    "logEnd": 108,
    "logStart": 76,
    "relationType": "parent",
    "start": 46,
    "to": "/services/service.ts/getService/method1",
    "type": "relationship",
  },
  {
    "columnEnd": 14,
    "columnStart": 13,
    "end": 55,
    "from": "/services/service.ts/getService/method1",
    "id": "/services/service.ts/getService/method1-><unknown>",
    "kind": "Identifier",
    "lineEnd": 3,
    "lineStart": 3,
    "relationType": "parent",
    "start": 54,
    "to": "<unknown>",
    "type": "relationship",
  },
  {
    "columnEnd": 6,
    "columnStart": 5,
    "end": 184,
    "entityType": "property",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts/getService/prop1",
    "kind": "PropertyAssignment",
    "lineEnd": 10,
    "lineStart": 6,
    "start": 114,
    "type": "entity",
  },
  {
    "columnEnd": 6,
    "columnStart": 5,
    "end": 184,
    "from": "/services/service.ts/getService",
    "id": "/services/service.ts/getService->/services/service.ts/getService/prop1",
    "kind": "PropertyAssignment",
    "lineEnd": 10,
    "lineStart": 6,
    "relationType": "parent",
    "start": 114,
    "to": "/services/service.ts/getService/prop1",
    "type": "relationship",
  },
  {
    "code": " {
        return a * a
      }",
    "columnEnd": 8,
    "columnStart": 7,
    "end": 178,
    "entityType": "function",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts/getService/prop1/method2",
    "kind": "MethodDeclaration",
    "lineEnd": 9,
    "lineStart": 7,
    "logEnd": 178,
    "logStart": 148,
    "start": 129,
    "type": "entity",
    "typeString": "(a: number) => number",
  },
  {
    "code": " {
        return a * a
      }",
    "columnEnd": 8,
    "columnStart": 7,
    "end": 178,
    "from": "/services/service.ts/getService/prop1",
    "id": "/services/service.ts/getService/prop1->/services/service.ts/getService/prop1/method2",
    "kind": "MethodDeclaration",
    "lineEnd": 9,
    "lineStart": 7,
    "logEnd": 178,
    "logStart": 148,
    "relationType": "parent",
    "start": 129,
    "to": "/services/service.ts/getService/prop1/method2",
    "type": "relationship",
  },
  {
    "columnEnd": 16,
    "columnStart": 15,
    "end": 138,
    "from": "/services/service.ts/getService/prop1/method2",
    "id": "/services/service.ts/getService/prop1/method2-><unknown>",
    "kind": "Identifier",
    "lineEnd": 7,
    "lineStart": 7,
    "relationType": "parent",
    "start": 137,
    "to": "<unknown>",
    "type": "relationship",
  },
  {
    "columnEnd": 49,
    "columnStart": 1,
    "end": 48,
    "from": "/utils/util.ts",
    "id": "/utils/util.ts->/services/service.ts",
    "kind": "ImportDeclaration",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "import",
    "start": 0,
    "to": "/services/service.ts",
    "type": "relationship",
  },
  {
    "columnEnd": 20,
    "columnStart": 10,
    "end": 19,
    "entityType": "variable",
    "filePath": "/utils/util.ts",
    "id": "/utils/util.ts/getService",
    "kind": "ImportSpecifier",
    "lineEnd": 1,
    "lineStart": 1,
    "start": 9,
    "type": "entity",
  },
  {
    "columnEnd": 20,
    "columnStart": 10,
    "end": 19,
    "from": "/utils/util.ts",
    "id": "/utils/util.ts->/utils/util.ts/getService",
    "kind": "ImportSpecifier",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "parent",
    "start": 9,
    "to": "/utils/util.ts/getService",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts",
    "id": "/utils/util.ts->/services/service.ts/getService",
    "relationType": "use",
    "to": "/services/service.ts/getService",
    "type": "relationship",
  },
  {
    "code": " {
  const service = getService()
  return service.method1(a, service.prop1.method2(2))
}",
    "columnEnd": 2,
    "columnStart": 1,
    "end": 169,
    "from": "/utils/util.ts",
    "id": "/utils/util.ts->/utils/util.ts/fn1",
    "kind": "FunctionDeclaration",
    "lineEnd": 6,
    "lineStart": 3,
    "logEnd": 169,
    "logStart": 81,
    "relationType": "parent",
    "start": 50,
    "to": "/utils/util.ts/fn1",
    "type": "relationship",
  },
  {
    "columnEnd": 22,
    "columnStart": 21,
    "end": 71,
    "from": "/utils/util.ts/fn1",
    "id": "/utils/util.ts/fn1-><unknown>",
    "kind": "Identifier",
    "lineEnd": 3,
    "lineStart": 3,
    "relationType": "parent",
    "start": 70,
    "to": "<unknown>",
    "type": "relationship",
  },
  {
    "columnEnd": 31,
    "columnStart": 9,
    "end": 113,
    "entityType": "variable",
    "filePath": "/utils/util.ts",
    "id": "/utils/util.ts/fn1/service",
    "kind": "VariableDeclaration",
    "lineEnd": 4,
    "lineStart": 4,
    "start": 91,
    "type": "entity",
  },
  {
    "columnEnd": 31,
    "columnStart": 9,
    "end": 113,
    "from": "/utils/util.ts/fn1",
    "id": "/utils/util.ts/fn1->/utils/util.ts/fn1/service",
    "kind": "VariableDeclaration",
    "lineEnd": 4,
    "lineStart": 4,
    "relationType": "parent",
    "start": 91,
    "to": "/utils/util.ts/fn1/service",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts/fn1/service",
    "id": "/utils/util.ts/fn1/service->/services/service.ts/getService",
    "relationType": "use",
    "to": "/services/service.ts/getService",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts/fn1",
    "id": "/utils/util.ts/fn1->/services/service.ts/getService/method1",
    "relationType": "use",
    "to": "/services/service.ts/getService/method1",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts/fn1",
    "id": "/utils/util.ts/fn1->/services/service.ts/getService/prop1",
    "relationType": "use",
    "to": "/services/service.ts/getService/prop1",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts/fn1",
    "id": "/utils/util.ts/fn1->/services/service.ts/getService/prop1/method2",
    "relationType": "use",
    "to": "/services/service.ts/getService/prop1/method2",
    "type": "relationship",
  },
]
`;

exports[`should analyze complex vue2-ts project 1`] = `
[
  {
    "entityType": "file",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/index.ts",
    "id": "/index.ts",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/package.json",
    "id": "/package.json",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts",
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/services",
    "id": "/services",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/utils/util.ts",
    "id": "/utils/util.ts",
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/utils",
    "id": "/utils",
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/",
    "id": "/",
    "type": "entity",
  },
  {
    "from": "/",
    "id": "/->/cmp.vue",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/cmp.vue",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/index.ts",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/index.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/package.json",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/package.json",
    "type": "relationship",
  },
  {
    "from": "/services",
    "id": "/services->/services/service.ts",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/services/service.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/services",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/services",
    "type": "relationship",
  },
  {
    "from": "/utils",
    "id": "/utils->/utils/util.ts",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/utils/util.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/utils",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/utils",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/",
    "type": "relationship",
  },
  {
    "columnEnd": 36,
    "columnStart": 1,
    "end": 36,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/utils/util.ts",
    "kind": "ImportDeclaration",
    "lineEnd": 2,
    "lineStart": 2,
    "relationType": "import",
    "start": 1,
    "to": "/utils/util.ts",
    "type": "relationship",
  },
  {
    "columnEnd": 126,
    "columnStart": 1,
    "end": 235,
    "entityType": "import_declaration",
    "filePath": "/cmp.vue",
    "id": "import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\"",
    "kind": "ImportDeclaration",
    "lineEnd": 12,
    "lineStart": 12,
    "start": 110,
    "type": "entity",
  },
  {
    "columnEnd": 126,
    "columnStart": 1,
    "end": 235,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\"",
    "kind": "ImportDeclaration",
    "lineEnd": 12,
    "lineStart": 12,
    "relationType": "import",
    "start": 110,
    "to": "import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\"",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue",
    "id": "/cmp.vue->/utils/util.ts",
    "relationType": "import",
    "to": "/utils/util.ts",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue",
    "id": "/cmp.vue->import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\"",
    "relationType": "import",
    "to": "import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\"",
    "type": "relationship",
  },
  {
    "columnEnd": 13,
    "columnStart": 10,
    "end": 13,
    "entityType": "variable",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/fn1",
    "kind": "ImportSpecifier",
    "lineEnd": 2,
    "lineStart": 2,
    "start": 10,
    "type": "entity",
  },
  {
    "columnEnd": 13,
    "columnStart": 10,
    "end": 13,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/cmp.vue.ts/fn1",
    "kind": "ImportSpecifier",
    "lineEnd": 2,
    "lineStart": 2,
    "relationType": "parent",
    "start": 10,
    "to": "/cmp.vue/fn1",
    "type": "relationship",
  },
  {
    "code": " {
  const service = getService()
  return service.method1(a, service.prop1.method2(2))
}",
    "columnEnd": 2,
    "columnStart": 1,
    "end": 169,
    "entityType": "function",
    "filePath": "/utils/util.ts",
    "id": "/utils/util.ts/fn1",
    "kind": "FunctionDeclaration",
    "lineEnd": 6,
    "lineStart": 3,
    "logEnd": 169,
    "logStart": 81,
    "start": 50,
    "type": "entity",
    "typeString": "typeof import(\\"/utils/util\\").fn1",
  },
  {
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/utils/util.ts/fn1",
    "relationType": "use",
    "to": "/utils/util.ts/fn1",
    "type": "relationship",
  },
  {
    "code": " {
    return {
      val: fn1(1)
    }
  }",
    "columnEnd": 4,
    "columnStart": 3,
    "end": 106,
    "entityType": "function",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/data",
    "kind": "MethodDeclaration",
    "lineEnd": 9,
    "lineStart": 5,
    "logEnd": 106,
    "logStart": 64,
    "start": 57,
    "type": "entity",
    "typeString": "() => { val: number; }",
  },
  {
    "code": " {
    return {
      val: fn1(1)
    }
  }",
    "columnEnd": 4,
    "columnStart": 3,
    "end": 106,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/cmp.vue.ts/data",
    "kind": "MethodDeclaration",
    "lineEnd": 9,
    "lineStart": 5,
    "logEnd": 106,
    "logStart": 64,
    "relationType": "parent",
    "start": 57,
    "to": "/cmp.vue/data",
    "type": "relationship",
  },
  {
    "columnEnd": 18,
    "columnStart": 7,
    "end": 96,
    "entityType": "property",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/data/val",
    "kind": "PropertyAssignment",
    "lineEnd": 7,
    "lineStart": 7,
    "start": 85,
    "type": "entity",
  },
  {
    "columnEnd": 18,
    "columnStart": 7,
    "end": 96,
    "from": "/cmp.vue/data",
    "id": "/cmp.vue.ts/data->/cmp.vue.ts/data/val",
    "kind": "PropertyAssignment",
    "lineEnd": 7,
    "lineStart": 7,
    "relationType": "parent",
    "start": 85,
    "to": "/cmp.vue/data/val",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue/data/val",
    "id": "/cmp.vue.ts/data/val->/utils/util.ts/fn1",
    "relationType": "use",
    "to": "/utils/util.ts/fn1",
    "type": "relationship",
  },
  {
    "columnEnd": 45,
    "columnStart": 10,
    "end": 154,
    "entityType": "variable",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/toDisplayString",
    "kind": "ImportSpecifier",
    "lineEnd": 12,
    "lineStart": 12,
    "start": 119,
    "type": "entity",
  },
  {
    "columnEnd": 45,
    "columnStart": 10,
    "end": 154,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/cmp.vue.ts/toDisplayString",
    "kind": "ImportSpecifier",
    "lineEnd": 12,
    "lineStart": 12,
    "relationType": "parent",
    "start": 119,
    "to": "/cmp.vue/toDisplayString",
    "type": "relationship",
  },
  {
    "columnEnd": 45,
    "columnStart": 29,
    "end": 154,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/_toDisplayString",
    "kind": "Identifier",
    "lineEnd": 12,
    "lineStart": 12,
    "start": 138,
    "type": "entity",
  },
  {
    "columnEnd": 70,
    "columnStart": 47,
    "end": 179,
    "entityType": "variable",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/openBlock",
    "kind": "ImportSpecifier",
    "lineEnd": 12,
    "lineStart": 12,
    "start": 156,
    "type": "entity",
  },
  {
    "columnEnd": 70,
    "columnStart": 47,
    "end": 179,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/cmp.vue.ts/openBlock",
    "kind": "ImportSpecifier",
    "lineEnd": 12,
    "lineStart": 12,
    "relationType": "parent",
    "start": 156,
    "to": "/cmp.vue/openBlock",
    "type": "relationship",
  },
  {
    "columnEnd": 70,
    "columnStart": 60,
    "end": 179,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/_openBlock",
    "kind": "Identifier",
    "lineEnd": 12,
    "lineStart": 12,
    "start": 169,
    "type": "entity",
  },
  {
    "columnEnd": 113,
    "columnStart": 72,
    "end": 222,
    "entityType": "variable",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/createElementBlock",
    "kind": "ImportSpecifier",
    "lineEnd": 12,
    "lineStart": 12,
    "start": 181,
    "type": "entity",
  },
  {
    "columnEnd": 113,
    "columnStart": 72,
    "end": 222,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/cmp.vue.ts/createElementBlock",
    "kind": "ImportSpecifier",
    "lineEnd": 12,
    "lineStart": 12,
    "relationType": "parent",
    "start": 181,
    "to": "/cmp.vue/createElementBlock",
    "type": "relationship",
  },
  {
    "columnEnd": 113,
    "columnStart": 94,
    "end": 222,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/_createElementBlock",
    "kind": "Identifier",
    "lineEnd": 12,
    "lineStart": 12,
    "start": 203,
    "type": "entity",
  },
  {
    "code": " {
  return (_openBlock(), _createElementBlock(\\"div\\", null, _toDisplayString(_ctx.val), 1 /* TEXT */))
}",
    "columnEnd": 2,
    "columnStart": 1,
    "end": 377,
    "entityType": "function",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/render",
    "kind": "FunctionDeclaration",
    "lineEnd": 16,
    "lineStart": 14,
    "logEnd": 377,
    "logStart": 274,
    "start": 237,
    "type": "entity",
    "typeString": "typeof import(\\"/cmp.vue\\").render",
  },
  {
    "code": " {
  return (_openBlock(), _createElementBlock(\\"div\\", null, _toDisplayString(_ctx.val), 1 /* TEXT */))
}",
    "columnEnd": 2,
    "columnStart": 1,
    "end": 377,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/cmp.vue.ts/render",
    "kind": "FunctionDeclaration",
    "lineEnd": 16,
    "lineStart": 14,
    "logEnd": 377,
    "logStart": 274,
    "relationType": "parent",
    "start": 237,
    "to": "/cmp.vue/render",
    "type": "relationship",
  },
  {
    "code": "_ctx",
    "columnEnd": 28,
    "columnStart": 24,
    "end": 264,
    "entityType": "unknown",
    "filePath": "/cmp.vue",
    "id": "<unknown>",
    "kind": "Parameter",
    "lineEnd": 14,
    "lineStart": 14,
    "meta_kind": "Parameter",
    "start": 260,
    "type": "entity",
  },
  {
    "columnEnd": 28,
    "columnStart": 24,
    "end": 264,
    "from": "/cmp.vue/render",
    "id": "/cmp.vue.ts/render-><unknown>",
    "kind": "Identifier",
    "lineEnd": 14,
    "lineStart": 14,
    "relationType": "parent",
    "start": 260,
    "to": "<unknown>",
    "type": "relationship",
  },
  {
    "columnEnd": 21,
    "columnStart": 11,
    "end": 296,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/render/_openBlock",
    "kind": "Identifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 286,
    "type": "entity",
  },
  {
    "columnEnd": 44,
    "columnStart": 25,
    "end": 319,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/render/_createElementBlock",
    "kind": "Identifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 300,
    "type": "entity",
  },
  {
    "columnEnd": 74,
    "columnStart": 58,
    "end": 349,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/render/_toDisplayString",
    "kind": "Identifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 333,
    "type": "entity",
  },
  {
    "columnEnd": 83,
    "columnStart": 80,
    "end": 358,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/render/val",
    "kind": "Identifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 355,
    "type": "entity",
  },
  {
    "columnEnd": 28,
    "columnStart": 1,
    "end": 27,
    "from": "/index.ts",
    "id": "/index.ts->/cmp.vue.ts",
    "kind": "ImportDeclaration",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "import",
    "start": 0,
    "to": "/cmp.vue",
    "type": "relationship",
  },
  {
    "from": "/index.ts",
    "id": "/index.ts->/cmp.vue",
    "relationType": "import",
    "to": "/cmp.vue",
    "type": "relationship",
  },
  {
    "columnEnd": 11,
    "columnStart": 8,
    "end": 10,
    "entityType": "identifier",
    "filePath": "/index.ts",
    "id": "/index.ts/cmp",
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "start": 7,
    "type": "entity",
  },
  {
    "code": " {
  return {
    method1(a: number, b: number) {
      return (a + b) / 2
    },
    prop1: {
      method2(a: number) {
        return a * a
      }
    }
  }
}",
    "columnEnd": 2,
    "columnStart": 1,
    "end": 190,
    "entityType": "function",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts/getService",
    "kind": "FunctionDeclaration",
    "lineEnd": 12,
    "lineStart": 1,
    "logEnd": 190,
    "logStart": 29,
    "start": 0,
    "type": "entity",
    "typeString": "typeof import(\\"/services/service\\").getService",
  },
  {
    "code": " {
  return {
    method1(a: number, b: number) {
      return (a + b) / 2
    },
    prop1: {
      method2(a: number) {
        return a * a
      }
    }
  }
}",
    "columnEnd": 2,
    "columnStart": 1,
    "end": 190,
    "from": "/services/service.ts",
    "id": "/services/service.ts->/services/service.ts/getService",
    "kind": "FunctionDeclaration",
    "lineEnd": 12,
    "lineStart": 1,
    "logEnd": 190,
    "logStart": 29,
    "relationType": "parent",
    "start": 0,
    "to": "/services/service.ts/getService",
    "type": "relationship",
  },
  {
    "code": " {
      return (a + b) / 2
    }",
    "columnEnd": 6,
    "columnStart": 5,
    "end": 108,
    "entityType": "function",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts/getService/method1",
    "kind": "MethodDeclaration",
    "lineEnd": 5,
    "lineStart": 3,
    "logEnd": 108,
    "logStart": 76,
    "start": 46,
    "type": "entity",
    "typeString": "(a: number, b: number) => number",
  },
  {
    "code": " {
      return (a + b) / 2
    }",
    "columnEnd": 6,
    "columnStart": 5,
    "end": 108,
    "from": "/services/service.ts/getService",
    "id": "/services/service.ts/getService->/services/service.ts/getService/method1",
    "kind": "MethodDeclaration",
    "lineEnd": 5,
    "lineStart": 3,
    "logEnd": 108,
    "logStart": 76,
    "relationType": "parent",
    "start": 46,
    "to": "/services/service.ts/getService/method1",
    "type": "relationship",
  },
  {
    "columnEnd": 14,
    "columnStart": 13,
    "end": 55,
    "from": "/services/service.ts/getService/method1",
    "id": "/services/service.ts/getService/method1-><unknown>",
    "kind": "Identifier",
    "lineEnd": 3,
    "lineStart": 3,
    "relationType": "parent",
    "start": 54,
    "to": "<unknown>",
    "type": "relationship",
  },
  {
    "columnEnd": 6,
    "columnStart": 5,
    "end": 184,
    "entityType": "property",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts/getService/prop1",
    "kind": "PropertyAssignment",
    "lineEnd": 10,
    "lineStart": 6,
    "start": 114,
    "type": "entity",
  },
  {
    "columnEnd": 6,
    "columnStart": 5,
    "end": 184,
    "from": "/services/service.ts/getService",
    "id": "/services/service.ts/getService->/services/service.ts/getService/prop1",
    "kind": "PropertyAssignment",
    "lineEnd": 10,
    "lineStart": 6,
    "relationType": "parent",
    "start": 114,
    "to": "/services/service.ts/getService/prop1",
    "type": "relationship",
  },
  {
    "code": " {
        return a * a
      }",
    "columnEnd": 8,
    "columnStart": 7,
    "end": 178,
    "entityType": "function",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts/getService/prop1/method2",
    "kind": "MethodDeclaration",
    "lineEnd": 9,
    "lineStart": 7,
    "logEnd": 178,
    "logStart": 148,
    "start": 129,
    "type": "entity",
    "typeString": "(a: number) => number",
  },
  {
    "code": " {
        return a * a
      }",
    "columnEnd": 8,
    "columnStart": 7,
    "end": 178,
    "from": "/services/service.ts/getService/prop1",
    "id": "/services/service.ts/getService/prop1->/services/service.ts/getService/prop1/method2",
    "kind": "MethodDeclaration",
    "lineEnd": 9,
    "lineStart": 7,
    "logEnd": 178,
    "logStart": 148,
    "relationType": "parent",
    "start": 129,
    "to": "/services/service.ts/getService/prop1/method2",
    "type": "relationship",
  },
  {
    "columnEnd": 16,
    "columnStart": 15,
    "end": 138,
    "from": "/services/service.ts/getService/prop1/method2",
    "id": "/services/service.ts/getService/prop1/method2-><unknown>",
    "kind": "Identifier",
    "lineEnd": 7,
    "lineStart": 7,
    "relationType": "parent",
    "start": 137,
    "to": "<unknown>",
    "type": "relationship",
  },
  {
    "columnEnd": 49,
    "columnStart": 1,
    "end": 48,
    "from": "/utils/util.ts",
    "id": "/utils/util.ts->/services/service.ts",
    "kind": "ImportDeclaration",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "import",
    "start": 0,
    "to": "/services/service.ts",
    "type": "relationship",
  },
  {
    "columnEnd": 20,
    "columnStart": 10,
    "end": 19,
    "entityType": "variable",
    "filePath": "/utils/util.ts",
    "id": "/utils/util.ts/getService",
    "kind": "ImportSpecifier",
    "lineEnd": 1,
    "lineStart": 1,
    "start": 9,
    "type": "entity",
  },
  {
    "columnEnd": 20,
    "columnStart": 10,
    "end": 19,
    "from": "/utils/util.ts",
    "id": "/utils/util.ts->/utils/util.ts/getService",
    "kind": "ImportSpecifier",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "parent",
    "start": 9,
    "to": "/utils/util.ts/getService",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts",
    "id": "/utils/util.ts->/services/service.ts/getService",
    "relationType": "use",
    "to": "/services/service.ts/getService",
    "type": "relationship",
  },
  {
    "code": " {
  const service = getService()
  return service.method1(a, service.prop1.method2(2))
}",
    "columnEnd": 2,
    "columnStart": 1,
    "end": 169,
    "from": "/utils/util.ts",
    "id": "/utils/util.ts->/utils/util.ts/fn1",
    "kind": "FunctionDeclaration",
    "lineEnd": 6,
    "lineStart": 3,
    "logEnd": 169,
    "logStart": 81,
    "relationType": "parent",
    "start": 50,
    "to": "/utils/util.ts/fn1",
    "type": "relationship",
  },
  {
    "columnEnd": 22,
    "columnStart": 21,
    "end": 71,
    "from": "/utils/util.ts/fn1",
    "id": "/utils/util.ts/fn1-><unknown>",
    "kind": "Identifier",
    "lineEnd": 3,
    "lineStart": 3,
    "relationType": "parent",
    "start": 70,
    "to": "<unknown>",
    "type": "relationship",
  },
  {
    "columnEnd": 31,
    "columnStart": 9,
    "end": 113,
    "entityType": "variable",
    "filePath": "/utils/util.ts",
    "id": "/utils/util.ts/fn1/service",
    "kind": "VariableDeclaration",
    "lineEnd": 4,
    "lineStart": 4,
    "start": 91,
    "type": "entity",
  },
  {
    "columnEnd": 31,
    "columnStart": 9,
    "end": 113,
    "from": "/utils/util.ts/fn1",
    "id": "/utils/util.ts/fn1->/utils/util.ts/fn1/service",
    "kind": "VariableDeclaration",
    "lineEnd": 4,
    "lineStart": 4,
    "relationType": "parent",
    "start": 91,
    "to": "/utils/util.ts/fn1/service",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts/fn1/service",
    "id": "/utils/util.ts/fn1/service->/services/service.ts/getService",
    "relationType": "use",
    "to": "/services/service.ts/getService",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts/fn1",
    "id": "/utils/util.ts/fn1->/services/service.ts/getService/method1",
    "relationType": "use",
    "to": "/services/service.ts/getService/method1",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts/fn1",
    "id": "/utils/util.ts/fn1->/services/service.ts/getService/prop1",
    "relationType": "use",
    "to": "/services/service.ts/getService/prop1",
    "type": "relationship",
  },
  {
    "from": "/utils/util.ts/fn1",
    "id": "/utils/util.ts/fn1->/services/service.ts/getService/prop1/method2",
    "relationType": "use",
    "to": "/services/service.ts/getService/prop1/method2",
    "type": "relationship",
  },
]
`;

exports[`should analyze simple ts project 1`] = `
[
  {
    "entityType": "file",
    "filePath": "/index.ts",
    "id": "/index.ts",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/util.ts",
    "id": "/util.ts",
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/",
    "id": "/",
    "type": "entity",
  },
  {
    "from": "/",
    "id": "/->/index.ts",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/index.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/util.ts",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/util.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/",
    "type": "relationship",
  },
  {
    "columnEnd": 29,
    "columnStart": 1,
    "end": 28,
    "from": "/index.ts",
    "id": "/index.ts->/util.ts",
    "kind": "ImportDeclaration",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "import",
    "start": 0,
    "to": "/util.ts",
    "type": "relationship",
  },
  {
    "columnEnd": 13,
    "columnStart": 10,
    "end": 12,
    "entityType": "variable",
    "filePath": "/index.ts",
    "id": "/index.ts/fn1",
    "kind": "ImportSpecifier",
    "lineEnd": 1,
    "lineStart": 1,
    "start": 9,
    "type": "entity",
  },
  {
    "columnEnd": 13,
    "columnStart": 10,
    "end": 12,
    "from": "/index.ts",
    "id": "/index.ts->/index.ts/fn1",
    "kind": "ImportSpecifier",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "parent",
    "start": 9,
    "to": "/index.ts/fn1",
    "type": "relationship",
  },
  {
    "columnEnd": 40,
    "columnStart": 14,
    "end": 39,
    "entityType": "variable",
    "filePath": "/util.ts",
    "id": "/util.ts/fn1",
    "kind": "VariableDeclaration",
    "lineEnd": 1,
    "lineStart": 1,
    "start": 13,
    "type": "entity",
  },
  {
    "from": "/index.ts",
    "id": "/index.ts->/util.ts/fn1",
    "relationType": "use",
    "to": "/util.ts/fn1",
    "type": "relationship",
  },
  {
    "columnEnd": 40,
    "columnStart": 14,
    "end": 39,
    "from": "/util.ts",
    "id": "/util.ts->/util.ts/fn1",
    "kind": "VariableDeclaration",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "parent",
    "start": 13,
    "to": "/util.ts/fn1",
    "type": "relationship",
  },
  {
    "columnEnd": 40,
    "columnStart": 20,
    "end": 39,
    "from": "/util.ts/fn1",
    "id": "/util.ts/fn1->/util.ts/fn1",
    "kind": "ArrowFunction",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "parent",
    "start": 19,
    "to": "/util.ts/fn1",
    "type": "relationship",
  },
  {
    "code": "a: number",
    "columnEnd": 30,
    "columnStart": 21,
    "end": 29,
    "entityType": "unknown",
    "filePath": "/util.ts",
    "id": "<unknown>",
    "kind": "Parameter",
    "lineEnd": 1,
    "lineStart": 1,
    "meta_kind": "Parameter",
    "start": 20,
    "type": "entity",
  },
  {
    "columnEnd": 22,
    "columnStart": 21,
    "end": 21,
    "from": "/util.ts/fn1",
    "id": "/util.ts/fn1-><unknown>",
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "parent",
    "start": 20,
    "to": "<unknown>",
    "type": "relationship",
  },
]
`;

exports[`should analyze vue-ts project 1`] = `
[
  {
    "entityType": "file",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/index.ts",
    "id": "/index.ts",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/util.ts",
    "id": "/util.ts",
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/",
    "id": "/",
    "type": "entity",
  },
  {
    "from": "/",
    "id": "/->/cmp.vue",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/cmp.vue",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/index.ts",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/index.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/util.ts",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/util.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/",
    "type": "relationship",
  },
  {
    "columnEnd": 30,
    "columnStart": 1,
    "end": 29,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/util.ts",
    "kind": "ImportDeclaration",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "import",
    "start": 0,
    "to": "/util.ts",
    "type": "relationship",
  },
  {
    "columnEnd": 126,
    "columnStart": 1,
    "end": 392,
    "entityType": "import_declaration",
    "filePath": "/cmp.vue",
    "id": "import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\"",
    "kind": "ImportDeclaration",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 267,
    "type": "entity",
  },
  {
    "columnEnd": 126,
    "columnStart": 1,
    "end": 392,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\"",
    "kind": "ImportDeclaration",
    "lineEnd": 15,
    "lineStart": 15,
    "relationType": "import",
    "start": 267,
    "to": "import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\"",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue",
    "id": "/cmp.vue->/util.ts",
    "relationType": "import",
    "to": "/util.ts",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue",
    "id": "/cmp.vue->import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\"",
    "relationType": "import",
    "to": "import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from \\"vue\\"",
    "type": "relationship",
  },
  {
    "columnEnd": 13,
    "columnStart": 10,
    "end": 12,
    "entityType": "variable",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/fn1",
    "kind": "ImportSpecifier",
    "lineEnd": 1,
    "lineStart": 1,
    "start": 9,
    "type": "entity",
  },
  {
    "columnEnd": 13,
    "columnStart": 10,
    "end": 12,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/cmp.vue.ts/fn1",
    "kind": "ImportSpecifier",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "parent",
    "start": 9,
    "to": "/cmp.vue/fn1",
    "type": "relationship",
  },
  {
    "code": " {
  return a + 1
}",
    "columnEnd": 2,
    "columnStart": 1,
    "end": 49,
    "entityType": "function",
    "filePath": "/util.ts",
    "id": "/util.ts/fn1",
    "kind": "FunctionDeclaration",
    "lineEnd": 3,
    "lineStart": 1,
    "logEnd": 49,
    "logStart": 31,
    "start": 0,
    "type": "entity",
    "typeString": "typeof import(\\"/util\\").fn1",
  },
  {
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/util.ts/fn1",
    "relationType": "use",
    "to": "/util.ts/fn1",
    "type": "relationship",
  },
  {
    "code": " {
  expose();

const val = ref(fn1(1))

const __returned__ = { val, fn1 }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
return __returned__
}",
    "columnEnd": 2,
    "columnStart": 3,
    "end": 263,
    "entityType": "function",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/setup",
    "kind": "MethodDeclaration",
    "lineEnd": 12,
    "lineStart": 4,
    "logEnd": 263,
    "logStart": 77,
    "start": 50,
    "type": "entity",
    "typeString": "(__props: any, { expose }: { expose: any; }) => { val: any; fn1: typeof import(\\"/util\\").fn1; }",
  },
  {
    "code": " {
  expose();

const val = ref(fn1(1))

const __returned__ = { val, fn1 }
Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
return __returned__
}",
    "columnEnd": 2,
    "columnStart": 3,
    "end": 263,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/cmp.vue.ts/setup",
    "kind": "MethodDeclaration",
    "lineEnd": 12,
    "lineStart": 4,
    "logEnd": 263,
    "logStart": 77,
    "relationType": "parent",
    "start": 50,
    "to": "/cmp.vue/setup",
    "type": "relationship",
  },
  {
    "code": "__props",
    "columnEnd": 16,
    "columnStart": 9,
    "end": 63,
    "entityType": "unknown",
    "filePath": "/cmp.vue",
    "id": "<unknown>",
    "kind": "Parameter",
    "lineEnd": 4,
    "lineStart": 4,
    "meta_kind": "Parameter",
    "start": 56,
    "type": "entity",
  },
  {
    "columnEnd": 16,
    "columnStart": 9,
    "end": 63,
    "from": "/cmp.vue/setup",
    "id": "/cmp.vue.ts/setup-><unknown>",
    "kind": "Identifier",
    "lineEnd": 4,
    "lineStart": 4,
    "relationType": "parent",
    "start": 56,
    "to": "<unknown>",
    "type": "relationship",
  },
  {
    "columnEnd": 24,
    "columnStart": 7,
    "end": 115,
    "entityType": "variable",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/setup/val",
    "kind": "VariableDeclaration",
    "lineEnd": 7,
    "lineStart": 7,
    "start": 98,
    "type": "entity",
  },
  {
    "columnEnd": 24,
    "columnStart": 7,
    "end": 115,
    "from": "/cmp.vue/setup",
    "id": "/cmp.vue.ts/setup->/cmp.vue.ts/setup/val",
    "kind": "VariableDeclaration",
    "lineEnd": 7,
    "lineStart": 7,
    "relationType": "parent",
    "start": 98,
    "to": "/cmp.vue/setup/val",
    "type": "relationship",
  },
  {
    "columnEnd": 16,
    "columnStart": 13,
    "end": 107,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/setup/val/ref",
    "kind": "Identifier",
    "lineEnd": 7,
    "lineStart": 7,
    "start": 104,
    "type": "entity",
  },
  {
    "from": "/cmp.vue/setup/val",
    "id": "/cmp.vue.ts/setup/val->/util.ts/fn1",
    "relationType": "use",
    "to": "/util.ts/fn1",
    "type": "relationship",
  },
  {
    "columnEnd": 34,
    "columnStart": 7,
    "end": 150,
    "entityType": "variable",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/setup/__returned__",
    "kind": "VariableDeclaration",
    "lineEnd": 9,
    "lineStart": 9,
    "start": 123,
    "type": "entity",
  },
  {
    "columnEnd": 34,
    "columnStart": 7,
    "end": 150,
    "from": "/cmp.vue/setup",
    "id": "/cmp.vue.ts/setup->/cmp.vue.ts/setup/__returned__",
    "kind": "VariableDeclaration",
    "lineEnd": 9,
    "lineStart": 9,
    "relationType": "parent",
    "start": 123,
    "to": "/cmp.vue/setup/__returned__",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue/setup/__returned__",
    "id": "/cmp.vue.ts/setup/__returned__->/cmp.vue.ts/setup/val",
    "relationType": "use",
    "to": "/cmp.vue/setup/val",
    "type": "relationship",
  },
  {
    "from": "/cmp.vue/setup/__returned__",
    "id": "/cmp.vue.ts/setup/__returned__->/util.ts/fn1",
    "relationType": "use",
    "to": "/util.ts/fn1",
    "type": "relationship",
  },
  {
    "columnEnd": 2031,
    "columnStart": 2007,
    "end": 2069,
    "entityType": "variable",
    "filePath": "/node_modules/typescript/lib/lib.es5.d.ts",
    "id": "/node_modules/typescript/lib/lib.es5.d.ts/Object",
    "kind": "VariableDeclaration",
    "lineEnd": 2,
    "lineStart": 2,
    "start": 2045,
    "type": "entity",
  },
  {
    "from": "/cmp.vue/setup",
    "id": "/cmp.vue.ts/setup->/node_modules/typescript/lib/lib.es5.d.ts/Object",
    "relationType": "use",
    "to": "/node_modules/typescript/lib/lib.es5.d.ts/Object",
    "type": "relationship",
  },
  {
    "columnEnd": 1567,
    "columnStart": 1484,
    "end": 1605,
    "entityType": "function",
    "filePath": "/node_modules/typescript/lib/lib.es5.d.ts",
    "id": "/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    "kind": "MethodSignature",
    "lineEnd": 2,
    "lineStart": 2,
    "start": 1522,
    "type": "entity",
    "typeString": "<T>(o: T, p: PropertyKey, attributes: PropertyDescriptor & ThisType<any>) => T",
  },
  {
    "from": "/cmp.vue/setup",
    "id": "/cmp.vue.ts/setup->/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    "relationType": "use",
    "to": "/node_modules/typescript/lib/lib.es5.d.ts/defineProperty",
    "type": "relationship",
  },
  {
    "columnEnd": 75,
    "columnStart": 58,
    "end": 225,
    "entityType": "property",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/setup/enumerable",
    "kind": "PropertyAssignment",
    "lineEnd": 10,
    "lineStart": 10,
    "start": 208,
    "type": "entity",
  },
  {
    "columnEnd": 75,
    "columnStart": 58,
    "end": 225,
    "from": "/cmp.vue/setup",
    "id": "/cmp.vue.ts/setup->/cmp.vue.ts/setup/enumerable",
    "kind": "PropertyAssignment",
    "lineEnd": 10,
    "lineStart": 10,
    "relationType": "parent",
    "start": 208,
    "to": "/cmp.vue/setup/enumerable",
    "type": "relationship",
  },
  {
    "columnEnd": 88,
    "columnStart": 77,
    "end": 238,
    "entityType": "property",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/setup/value",
    "kind": "PropertyAssignment",
    "lineEnd": 10,
    "lineStart": 10,
    "start": 227,
    "type": "entity",
  },
  {
    "columnEnd": 88,
    "columnStart": 77,
    "end": 238,
    "from": "/cmp.vue/setup",
    "id": "/cmp.vue.ts/setup->/cmp.vue.ts/setup/value",
    "kind": "PropertyAssignment",
    "lineEnd": 10,
    "lineStart": 10,
    "relationType": "parent",
    "start": 227,
    "to": "/cmp.vue/setup/value",
    "type": "relationship",
  },
  {
    "columnEnd": 45,
    "columnStart": 10,
    "end": 311,
    "entityType": "variable",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/toDisplayString",
    "kind": "ImportSpecifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 276,
    "type": "entity",
  },
  {
    "columnEnd": 45,
    "columnStart": 10,
    "end": 311,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/cmp.vue.ts/toDisplayString",
    "kind": "ImportSpecifier",
    "lineEnd": 15,
    "lineStart": 15,
    "relationType": "parent",
    "start": 276,
    "to": "/cmp.vue/toDisplayString",
    "type": "relationship",
  },
  {
    "columnEnd": 45,
    "columnStart": 29,
    "end": 311,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/_toDisplayString",
    "kind": "Identifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 295,
    "type": "entity",
  },
  {
    "columnEnd": 70,
    "columnStart": 47,
    "end": 336,
    "entityType": "variable",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/openBlock",
    "kind": "ImportSpecifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 313,
    "type": "entity",
  },
  {
    "columnEnd": 70,
    "columnStart": 47,
    "end": 336,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/cmp.vue.ts/openBlock",
    "kind": "ImportSpecifier",
    "lineEnd": 15,
    "lineStart": 15,
    "relationType": "parent",
    "start": 313,
    "to": "/cmp.vue/openBlock",
    "type": "relationship",
  },
  {
    "columnEnd": 70,
    "columnStart": 60,
    "end": 336,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/_openBlock",
    "kind": "Identifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 326,
    "type": "entity",
  },
  {
    "columnEnd": 113,
    "columnStart": 72,
    "end": 379,
    "entityType": "variable",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/createElementBlock",
    "kind": "ImportSpecifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 338,
    "type": "entity",
  },
  {
    "columnEnd": 113,
    "columnStart": 72,
    "end": 379,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/cmp.vue.ts/createElementBlock",
    "kind": "ImportSpecifier",
    "lineEnd": 15,
    "lineStart": 15,
    "relationType": "parent",
    "start": 338,
    "to": "/cmp.vue/createElementBlock",
    "type": "relationship",
  },
  {
    "columnEnd": 113,
    "columnStart": 94,
    "end": 379,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/_createElementBlock",
    "kind": "Identifier",
    "lineEnd": 15,
    "lineStart": 15,
    "start": 360,
    "type": "entity",
  },
  {
    "code": " {
  return (_openBlock(), _createElementBlock(\\"div\\", null, _toDisplayString(_ctx.val), 1 /* TEXT */))
}",
    "columnEnd": 2,
    "columnStart": 1,
    "end": 534,
    "entityType": "function",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/render",
    "kind": "FunctionDeclaration",
    "lineEnd": 19,
    "lineStart": 17,
    "logEnd": 534,
    "logStart": 431,
    "start": 394,
    "type": "entity",
    "typeString": "typeof import(\\"/cmp.vue\\").render",
  },
  {
    "code": " {
  return (_openBlock(), _createElementBlock(\\"div\\", null, _toDisplayString(_ctx.val), 1 /* TEXT */))
}",
    "columnEnd": 2,
    "columnStart": 1,
    "end": 534,
    "from": "/cmp.vue",
    "id": "/cmp.vue.ts->/cmp.vue.ts/render",
    "kind": "FunctionDeclaration",
    "lineEnd": 19,
    "lineStart": 17,
    "logEnd": 534,
    "logStart": 431,
    "relationType": "parent",
    "start": 394,
    "to": "/cmp.vue/render",
    "type": "relationship",
  },
  {
    "columnEnd": 28,
    "columnStart": 24,
    "end": 421,
    "from": "/cmp.vue/render",
    "id": "/cmp.vue.ts/render-><unknown>",
    "kind": "Identifier",
    "lineEnd": 17,
    "lineStart": 17,
    "relationType": "parent",
    "start": 417,
    "to": "<unknown>",
    "type": "relationship",
  },
  {
    "columnEnd": 21,
    "columnStart": 11,
    "end": 453,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/render/_openBlock",
    "kind": "Identifier",
    "lineEnd": 18,
    "lineStart": 18,
    "start": 443,
    "type": "entity",
  },
  {
    "columnEnd": 44,
    "columnStart": 25,
    "end": 476,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/render/_createElementBlock",
    "kind": "Identifier",
    "lineEnd": 18,
    "lineStart": 18,
    "start": 457,
    "type": "entity",
  },
  {
    "columnEnd": 74,
    "columnStart": 58,
    "end": 506,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/render/_toDisplayString",
    "kind": "Identifier",
    "lineEnd": 18,
    "lineStart": 18,
    "start": 490,
    "type": "entity",
  },
  {
    "columnEnd": 83,
    "columnStart": 80,
    "end": 515,
    "entityType": "identifier",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue/render/val",
    "kind": "Identifier",
    "lineEnd": 18,
    "lineStart": 18,
    "start": 512,
    "type": "entity",
  },
  {
    "columnEnd": 28,
    "columnStart": 1,
    "end": 27,
    "from": "/index.ts",
    "id": "/index.ts->/cmp.vue.ts",
    "kind": "ImportDeclaration",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "import",
    "start": 0,
    "to": "/cmp.vue",
    "type": "relationship",
  },
  {
    "from": "/index.ts",
    "id": "/index.ts->/cmp.vue",
    "relationType": "import",
    "to": "/cmp.vue",
    "type": "relationship",
  },
  {
    "columnEnd": 11,
    "columnStart": 8,
    "end": 10,
    "entityType": "identifier",
    "filePath": "/index.ts",
    "id": "/index.ts/cmp",
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "start": 7,
    "type": "entity",
  },
  {
    "code": " {
  return a + 1
}",
    "columnEnd": 2,
    "columnStart": 1,
    "end": 49,
    "from": "/util.ts",
    "id": "/util.ts->/util.ts/fn1",
    "kind": "FunctionDeclaration",
    "lineEnd": 3,
    "lineStart": 1,
    "logEnd": 49,
    "logStart": 31,
    "relationType": "parent",
    "start": 0,
    "to": "/util.ts/fn1",
    "type": "relationship",
  },
  {
    "columnEnd": 22,
    "columnStart": 21,
    "end": 21,
    "from": "/util.ts/fn1",
    "id": "/util.ts/fn1-><unknown>",
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "parent",
    "start": 20,
    "to": "<unknown>",
    "type": "relationship",
  },
]
`;
